chore: add ai tests
